@@ -27,6 +27,7 @@ class CampaignsController < ApplicationController
   #----------------------------------------------------------------------------
   def show
     @campaign = Campaign.find(params[:id])
+    @stage = Setting.opportunity_stage.inject({}) { |hash, item| hash[item.last] = item.first; hash }
     @comment = Comment.new
 
     respond_to do |format|
