@@ -27,8 +27,8 @@
 
 class Campaign < ActiveRecord::Base
   belongs_to :user
-  has_many :leads, :order => "id DESC"
-  has_many :opportunities
+  has_many :leads, :order => "id DESC", :dependent => :destroy
+  has_many :opportunities, :order => "id DESC", :dependent => :destroy
   named_scope :only, lambda { |filters| { :conditions => [ "status IN (?)" + (filters.delete("other") ? " OR status IS NULL" : ""), filters ] } }
 
   uses_mysql_uuid
