@@ -2,6 +2,7 @@
   = hidden_field_tag "context", "#{@context}"
   = f.hidden_field :user_id
   = f.hidden_field :assigned_to
+  = f.hidden_field :campaign_id
   = f.error_messages
   .section
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
