@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Tue, Feb 23, 2008
+---------------------------------------------------------------------
+- Implemented adding opportunities from the [Campaign] landing page.
+
 Mon, Feb 23, 2008
 ---------------------------------------------------------------------
 - Implemented adding leads from the [Campaign] landing page.
